third_party/rust/indoc/v1/crate/tests/ui/no-arguments.stderr
error: unexpected end of macro invocation, expected format string
 --> $DIR/no-arguments.rs:4:5
  |
4 |     indoc!();
  |     ^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
