third_party/rust/indoc/v1/crate/tests/ui/no-arguments.rs
use indoc::indoc;

fn main() {
    indoc!();
}
